Got stuck on AB pruning, normal Minimax AI is working correctly, but slooowly

--- a/css/gomoku.css
+++ b/css/gomoku.css
@@ -29,11 +29,11 @@ body{
 
 .square {
   padding: 0;
-  margin: 0.2vh;
-  height: 4vh;
-  width: 4vh;
-  line-height: 4vh;
-  border-radius: 2px;
+  margin: 0.4vh;
+  height: 8vh;
+  width: 8vh;
+  line-height: 8vh;
+  border-radius: 4px;
   background: #fff;
   cursor: pointer;
   float: left;
